[project]
name = "bps-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "dagster>=1.9.13",
    "dagster-webserver>=1.9.13",
    "duckdb>=1.2.0",
    "fastparquet>=2024.11.0",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "pyarrow>=19.0.1",
    "scikit-learn>=1.6.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "dagster-webserver>=1.9.13",
    "pytest>=8.3.4",
]
